--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/GestionLibros.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/GestionLibros.form
@@ -165,12 +165,12 @@
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jTextField9" min="-2" pref="127" max="-2" attributes="0"/>
                                   <Component id="jTextField8" min="-2" pref="127" max="-2" attributes="0"/>
                                   <Component id="jTextField7" min="-2" pref="127" max="-2" attributes="0"/>
                                   <Component id="jTextField6" min="-2" pref="127" max="-2" attributes="0"/>
-                                  <Component id="jTextField5" min="-2" pref="127" max="-2" attributes="0"/>
                                   <Component id="jTextField4" min="-2" pref="127" max="-2" attributes="0"/>
+                                  <Component id="jYearChooser1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jSpinField1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -207,9 +207,9 @@
                                   <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jLabel6" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                                  <Component id="jTextField5" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jLabel6" min="-2" pref="20" max="-2" attributes="0"/>
+                                  <Component id="jYearChooser1" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -227,9 +227,9 @@
                                   <Component id="jTextField8" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jLabel9" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                                  <Component id="jTextField9" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jLabel9" min="-2" pref="20" max="-2" attributes="0"/>
+                                  <Component id="jSpinField1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -239,8 +239,6 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JTextField" name="jTextField5">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
                 <Property name="text" type="java.lang.String" value="A&#xf1;o de publicaci&#xf3;n:"/>
@@ -291,8 +289,6 @@
                 <Property name="text" type="java.lang.String" value="Autor/es:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextField9">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Lugar de publicaci&#xf3;n:"/>
@@ -331,6 +327,10 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="com.toedter.calendar.JYearChooser" name="jYearChooser1">
+            </Component>
+            <Component class="com.toedter.components.JSpinField" name="jSpinField1">
+            </Component>
           </SubComponents>
         </Container>
         <Component class="javax.swing.JButton" name="btnnuevo3">
