Complete la tabla Usuario, con las funciones de todos los botones, cree la clase DBSentencias, agregue otro boton llamado cancelar, agregue una imagen,  cree el metodo refrescar tabla, y tambien el objeto Usuario,tambien que cuando uno oprima a la tabla los datos del usuario aparezcan en los textfileds, etc

--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
@@ -76,6 +76,11 @@
                 <Property name="text" type="java.lang.String" value="Gestionar Personal"/>
               </Properties>
             </Menu>
+            <Menu class="javax.swing.JMenu" name="jMenu11">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Cambiar Contrase&#xf1;a"/>
+              </Properties>
+            </Menu>
           </SubComponents>
         </Menu>
       </SubComponents>
