--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/Login.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/Login.form
@@ -399,6 +399,9 @@
           </Layout>
           <SubComponents>
             <Component class="org.edisoncor.gui.textField.TextFieldRound" name="txtMatriculaID">
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtMatriculaIDKeyTyped"/>
+              </Events>
             </Component>
             <Component class="org.edisoncor.gui.passwordField.PasswordFieldRoundIcon" name="txtpasswordLog">
             </Component>
