--- a/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
+++ b/ProyectoSistemaBiblioteca/src/Interfaz_Grafica/VentanaPrincipal.form
@@ -16,7 +16,7 @@
         <Menu class="javax.swing.JMenu" name="jMenuSistema">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/sistema_opt (1).jpg"/>
+              <Image iconType="3" name="/imagenes/ico_pc_opt.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Sistema"/>
           </Properties>
@@ -42,7 +42,7 @@
         <Menu class="javax.swing.JMenu" name="jMenuPrestamo">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/prestamo_opt (1).jpg"/>
+              <Image iconType="3" name="/imagenes/Prestamo_opt.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="P&#xe9;stamos"/>
           </Properties>
@@ -103,6 +103,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cambiar Contrase&#xf1;a"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuCambiarContrase&#xf1;aActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -139,8 +142,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jcMousePanel1" min="-2" pref="227" max="-2" attributes="0"/>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="jcMousePanel1" min="-2" pref="287" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel1" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -150,7 +153,7 @@
     <Container class="jcMousePanel.jcMousePanel" name="jcMousePanel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagenes/bibliotecageneral.jpg"/>
+          <Image iconType="3" name="/imagenes/biblio.jpg"/>
         </Property>
         <Property name="visibleLogo" type="boolean" value="false"/>
       </Properties>
@@ -163,7 +166,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="227" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="287" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
